# adv_mla_lab_1

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py
models/: linear_poly_2.joblib  ohe.joblib  scaler.joblib
notebooks/: 1_baseline.ipynb.ipynb  2_linear_poly.ipynb.ipynb
